# ppocrv3-rec-openvino

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: ocr_rec.h  preprocess_op.h  utility.h
src/: ocr_rec.cpp  preprocess_op.cpp  utility.cpp
